--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
     <head>
-
+        <title>Report - Sentinel</title>
     </head>
 
     <body>
-        
-    </body>
 
+    </body>
+<link rel="stylesheet" href="theme.css">
+<script src="script.js"></script>
 </html>
